equathora/src/components/Dropdown.css
.dropdown {
    position: relative;
    display: flex;
    height: 84px;
    margin-left: 40px;
    z-index: 1001;
}

.dropbtn {
    background-color: transparent;
    color: var(--secondary-color);
    border: none;
    font-family: 'Public Sans', sans-serif;
    height: 100%;
    margin: auto 0;
    width: auto;
    list-style: none;
    font-weight: 600;
    font-size: 18px;
    padding: 0 12px;
}

.dropdown-content a {
    color: var(--secondary-color);
}

.dropdown-content {
    opacity: 0;
    visibility: hidden;
    left: -60px;
    top: 65px;
    position: absolute;
    background-color: var(--main-color);
    min-width: 360px;
    box-shadow: 0 10px 12px rgba(0, 0, 0, 0.2);
    font-family: 'Public Sans', sans-serif;
    border-radius: 5px 5px 10px 10px;
    z-index: 1002;
    transition: opacity 0.2s ease, visibility 0.2s ease, transform 0.2s ease;
}

.dropbtn:hover+.dropdown-content,
.dropdown-content:hover {
    transform: translateY(8px);
    opacity: 1;
    visibility: visible;
}

.dropbtn:hover {
    color: var(--accent-color);
}

.ntfc-no {
    margin-left: auto;
    display: flex;
    align-items: center;
    padding: 0 10px;
}

.dropdown-link {
    display: flex;
    width: 100%;
    padding: 10px;
    gap: 10px;
    border-top: 1px solid var(--french-gray);
    align-items: center;
    /* Add this to vertically center items */
}

.dropdown-link:hover {
    background-color: white;
    border-radius: 5px 5px 10px 10px;
}

.dropdown-link:hover .dropdown-text h4,
.dropdown-link:hover .dropdown-text h6 {
    color: var(--secondary-color);
}

.dropdown-content a:hover {
    color: var(--secondary-color);
    text-decoration: none;
}

.dropdown-text {
    display: flex;
    flex-direction: column;
    justify-content: center;
    font-family: 'Public Sans', serif;
}

.dropdown-text h4 {
    font-size: 1.1rem;
}

.dropdown-text h6 {
    font-size: 0.8rem;
    font-weight: 400;
}

.dropdown-image {
    height: 50px;
    width: 50px;
}

.dropdown-icon {
    color: var(--secondary-color);
    transition: color 0.2s;
}

.dropbtn:hover .dropdown-icon {
    color: var(--accent-color);
}

#navbar-right .dropdown .dropdown-content {
    left: auto;
    right: -60px;
    top: 65px;
    min-width: 360px;
}

@media only screen and (min-width: 992px)and (max-width: 1199px) {
    .dropdown {
        margin-left: 20px;
    }

    .dropdown-content {
        min-width: 320px;
    }

    #navbar-right .dropdown .dropdown-content {
        right: -10px;
        min-width: 320px;
    }

    .dropbtn {
        font-size: 16px;
        padding: 0 8px;
    }
}

